Added swagger to product endpoints
