# backend/crud-api-dynamodb/packages/functions/src/product/swagger-output.json
@@ -2,17 +2,11 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    "title": "Product API",
+    "description": "Product api to handle product creation"
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "User",
-      "description": "Endpoints"
-    }
-  ],
   "schemes": [
     "http",
     "https"
@@ -46,9 +40,77 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Create new product.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Testi tuote"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "description"
+                },
+                "price": {
+                  "type": "number",
+                  "example": 10
+                },
+                "currency": {
+                  "type": "string",
+                  "example": "EUR"
+                },
+                "active": {
+                  "type": "boolean",
+                  "example": true
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Some description...",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Testi tuote"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "description"
+                },
+                "price": {
+                  "type": "number",
+                  "example": 10
+                },
+                "currency": {
+                  "type": "string",
+                  "example": "EUR"
+                },
+                "active": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "_id": {
+                  "type": "string",
+                  "example": "64ad7c8ad87182167e7545bb"
+                },
+                "__v": {
+                  "type": "number",
+                  "example": 0
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -87,11 +149,77 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Update new product.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Testi tuote"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "description"
+                },
+                "price": {
+                  "type": "number",
+                  "example": 10
+                },
+                "currency": {
+                  "type": "string",
+                  "example": "EUR"
+                },
+                "active": {
+                  "type": "boolean",
+                  "example": true
+                }
+              }
+            }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Found product with id",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Testi tuote"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "description"
+                },
+                "price": {
+                  "type": "number",
+                  "example": 10
+                },
+                "currency": {
+                  "type": "string",
+                  "example": "EUR"
+                },
+                "active": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "_id": {
+                  "type": "string",
+                  "example": "/products/:productId"
+                },
+                "__v": {
+                  "type": "number",
+                  "example": 0
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "404": {
             "description": "Not Found"
@@ -123,91 +251,6 @@
           }
         }
       }
-    }
-  },
-  "definitions": {
-    "Parents": {
-      "type": "object",
-      "properties": {
-        "father": {
-          "type": "string",
-          "example": "Simon Doe"
-        },
-        "mother": {
-          "type": "string",
-          "example": "Marie Doe"
-        }
-      }
-    },
-    "User": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "example": "Jhon Doe"
-        },
-        "age": {
-          "type": "number",
-          "example": 29
-        },
-        "parents": {
-          "$ref": "#/definitions/Parents"
-        },
-        "diplomas": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "school": {
-                "type": "string",
-                "example": "XYZ University"
-              },
-              "year": {
-                "type": "number",
-                "example": 2020
-              },
-              "completed": {
-                "type": "boolean",
-                "example": true
-              },
-              "internship": {
-                "type": "object",
-                "properties": {
-                  "hours": {
-                    "type": "number",
-                    "example": 290
-                  },
-                  "location": {
-                    "type": "string",
-                    "example": "XYZ Company"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "AddUser": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "example": "Jhon Doe"
-        },
-        "age": {
-          "type": "number",
-          "example": 29
-        },
-        "about": {
-          "type": "string",
-          "example": ""
-        }
-      },
-      "required": [
-        "name",
-        "age"
-      ]
     }
   }
 }
